Actions
Bug #9350
closedypcmd: this statement may fall through
Start date:
2018-03-25
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
issue found by gcc 7 build:
rpc.ypupdated.c:100:13: error: this statement may fall through [-Werror=implicit-fallthrough=] } else if (strcmp(argv[1], "-s") == 0) { ^ rpc.ypupdated.c:104:2: note: here default: ^~~~~~~ rpc.ypupdated.c: In function 'ypupdate_prog': rpc.ypupdated.c:241:6: error: this statement may fall through [-Werror=implicit-fallthrough=] if (insecure) { ^ rpc.ypupdated.c:254:2: note: here default: ^~~~~~~ openchild.c:111:3: error: this statement may fall through [-Werror=implicit-fallthrough=] exit(1); ^~~~~~~ openchild.c:113:2: note: here default: ^~~~~~~ cc1: all warnings being treated as errors
Updated by Electric Monk over 4 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 9bba04fed2291aa884d1da64bc62150d5562cc5b
commit 9bba04fed2291aa884d1da64bc62150d5562cc5b Author: Toomas Soome <tsoome@me.com> Date: 2018-04-03T13:16:44.000Z 9350 ypcmd: this statement may fall through Reviewed by: Jason King <jason.brian.king@gmail.com> Reviewed by: Yuri Pankov <yuripv@yuripv.net> Approved by: Gordon Ross <gwr@nexenta.com>
Actions