9350 ypcmd: this statement may fall through Reviewed by: Jason King <jason.brian.king@gmail.com> Reviewed by: Yuri Pankov <yuripv@yuripv.net> Approved by: Gordon Ross <gwr@nexenta.com>